--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /main.log
-/out.cjs
+/out.js
+/src/test/dummy.js
 
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
