--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "prettier": "^3.3.2"
+    "openai": "^4.56.1",
+    "prettier": "^3.3.2",
+    "putout": "^36.3.1"
+  },
+  "scripts": {
+    "build-dummy": "bun build ./src/test/dummy.ts --minify --outfile ./src/test/dummy.js"
   }
 }
