--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
+    "@babel/types": "^7.25.6",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@types/babel__traverse": "^7.20.6",
     "@types/bun": "^1.1.8"
   },
   "peerDependencies": {
