--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /out.js
 /src/test/dummy.js
 /llama.log
+/.cache-*
 
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
