--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@babel/types": "^7.25.6",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/babel__traverse": "^7.20.6",
-    "@types/bun": "^1.1.8"
+    "@types/bun": "^1.1.8",
+    "@types/string-template": "^1.0.6"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
@@ -17,7 +18,8 @@
     "commander": "^12.1.0",
     "openai": "^4.56.1",
     "prettier": "^3.3.3",
-    "putout": "^36.4.1"
+    "putout": "^36.4.1",
+    "string-template": "^1.0.0"
   },
   "scripts": {
     "build-dummy": "bun build ./src/test/dummy.ts --minify --outfile ./src/test/dummy.js",
